# couch-simple

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.org  CHANGELOG.txt  README.org  README.txt  Setup.hs  couch-simple.cabal  default.nix
src/lib/Database/: Couch.hs
src/lib/Database/Couch/: Explicit.hs  Internal.hs  RequestBuilder.hs  Response.hs  ResponseParser.hs  Types.hs
src/lib/Database/Couch/Explicit/: Configuration.hs  Database.hs  Design.hs  Doc.hs  DocBase.hs  Local.hs  Server.hs
test/: Functionality.hs  HLint.hs  Main.hs  Quality.hs  Style.hs  test.hs
test/Couch/: Explicit.hs  Internal.hs  Util.hs
test/Couch/Explicit/: Configuration.hs  Database.hs  Server.hs
test/Functionality/: Internal.hs  Util.hs
test/Functionality/Explicit/: Configuration.hs  Database.hs  Design.hs  Doc.hs  Local.hs  Server.hs
test/Quality/: HLint.hs
