author:              Michael Alan Dorman
bug-reports:         https://github.com/mdorman/couch-simple/issues
build-type:          Simple
cabal-version:       >= 1.10
category:            Database
copyright:           Copyright (c) 2015, Michael Alan Dorman
description:         Based on http-client, with intended extensions for streaming through Conduit and other libraries.
homepage:            https://github.com/mdorman/couch-simple
license-file:        LICENSE
license:             MIT
maintainer:          mdorman@jaunder.io
name:                couch-simple
synopsis:            A lightweight modern client for CouchDB
version:             0.0.0.0

source-repository head
  type:     git
  location: https://github.com/mdorman/couch-simple.git

library
  build-depends: base >= 4.6 && < 4.8
               , aeson
               , attoparsec
               , exceptions
               , http-client
               , http-types
               , text
               , transformers
  default-language: Haskell2010
  exposed-modules: Database.Couch
                   Database.Couch.Internal
  ghc-options: -Wall
  hs-source-dirs: src/lib

test-suite test
  build-depends: base >= 4.6 && < 4.8
               , aeson
               , couch-simple
               , data-default
               , errors
               , hspec
               , http-client
               , http-types
               , tasty
               , tasty-hspec >= 0.1.0.1 && < 0.2
               , unordered-containers
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: test
  main-is: test.hs
  type: exitcode-stdio-1.0
