author:              Michael Alan Dorman
bug-reports:         https://github.com/mdorman/couch-simple/issues
build-type:          Simple
cabal-version:       >= 1.10
category:            Database
copyright:           Copyright (c) 2015, Michael Alan Dorman
description:         Based on http-client, with intended extensions for streaming through Conduit and other libraries.
homepage:            https://github.com/mdorman/couch-simple
license-file:        LICENSE
license:             MIT
maintainer:          mdorman@jaunder.io
name:                couch-simple
synopsis:            A lightweight modern client for CouchDB
version:             0.0.0.0

source-repository head
  type:     git
  location: https://github.com/mdorman/couch-simple.git

library
  build-depends: base >= 4.6 && < 4.10
               , aeson
               , attoparsec
               , bytestring
               , data-default
               , either
               , exceptions
               , http-client
               , http-types
               , mtl
               , text
               , transformers
               , unordered-containers
               , uuid
  default-language: Haskell2010
  exposed-modules: Database.Couch
                   Database.Couch.Explicit.Configuration
                   Database.Couch.Explicit.Database
                   Database.Couch.Explicit.Server
                   Database.Couch.Internal
                   Database.Couch.RequestBuilder
                   Database.Couch.Response
                   Database.Couch.ResponseParser
                   Database.Couch.Types
  ghc-options: -Wall
  hs-source-dirs: src/lib
  if impl(ghc < 7.8)
    build-depends: bytestring-builder


test-suite functionality
  build-depends: base >= 4.6 && < 4.10
               , aeson
               , bytestring
               , couch-simple
               , data-default
               , directory
               , either
               , errors
               , filepath
               , hjsonschema
               , hspec
               , http-client
               , http-types
               , lens
               , lens-aeson
               , random
               , tasty
               , tasty-hunit
               , text
               , transformers
               , unordered-containers
               , uuid
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: test
  main-is: Functionality.hs
  type: exitcode-stdio-1.0

test-suite style
  build-depends: base >= 4.6 && < 4.10
               , hlint == 1.*
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Style.hs
  type: exitcode-stdio-1.0
